--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,8 @@ build tests and executable:
     - main
 
   script:
-    - git submodule init
-    - git submodule update
-    - mkdir build && cd build
-    - cmake -DCMAKE_BUILD_TYPE=Coverage -DWITH_UNIT_TEST=1 ..
-    - make -j 2
+    - cmake -S . -B build -DCMAKE_BUILD_TYPE=Coverage -DWITH_UNIT_TEST=1
+    - cmake --build build -j 2
 
   artifacts:
     name: "$CI_JOB_NAME"
@@ -37,12 +34,11 @@ test programs:
   dependencies:
     - build tests and executable 
   script:
-      - cd build
-      - make test
-      - cd ../tests/integrationTests
+      - ctest --test-dir build
+      - cd tests/integrationTests
       - ./run_all_tests.sh
-      - cd ../../build
-      - gcovr -f ../src/
+      - cd ../..
+      - gcovr -f src
   coverage: '/\d*\.*\d+%/'
 
 ### GITLAB SECURITY TESTS ###
