--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -24,7 +24,7 @@ jobs:
     
     # install dependencies
     - name: boost
-      run: sudo apt-get update && sudo apt-get install -yq libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-test-dev libboost-system-dev libboost-log-dev
+      run: sudo apt-get update && sudo apt-get install -yq libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-test-dev libboost-system-dev libboost-log-dev bzip2
 
     - name: bats
       run: |
